--- a/Client/.env
+++ b/Client/.env
@@ -1,1 +1,3 @@
-API_BASE_URL=http://localhost:8080
+API_BASE_URL= http://localhost:8080
+RAZORPAY_API_KEY="rzp_test_FtVK05Td5kBCzd"
+RAZORPAY_API_SECRET='PEYuPWhyBGcmOWSl2MmWPpVW'
