--- a/Client/package.json
+++ b/Client/package.json
@@ -8,19 +8,25 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "date-fns": "^2.30.0",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-razorpay": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -29,6 +35,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.6.2",
     "styled-components": "^5.3.10",
     "tailwind-scrollbar": "^3.0.4",
     "web-vitals": "^2.1.4"
