--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.6.2"
   }
 }
