--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
@@ -13,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.41.0",
     "axios": "^1.3.5",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
@@ -20,6 +24,7 @@
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -30,7 +35,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.7.1",
+    "react-spring-3d-carousel": "^1.3.4",
+    "react-stars": "^2.2.5",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
